[tool.poetry]
name = "climate-patent-project"
version = "0.1.0"
description = ""
authors = ["Meg Patakota <meg.patakota@mishcon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
transformers = {extras = ["torch"], version = "^4.44.2"}
sentencepiece = "^0.2.0"
protobuf = "^5.28.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
accelerate = "^0.34.2"
datasets = "^3.0.0"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
